--- a/myproject/templates/misccanteen.html
+++ b/myproject/templates/misccanteen.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-{%load static%}
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Misc canteen</title>
-    <link rel="icon" href="{% static 'image/kglogo.jpg' %}">
-    <link rel="stylesheet" href="{% static 'misc-canteenstyle.css' %}">
+    <link rel="icon" href="image/kglogo.jpg">
+    <link rel="stylesheet" href="misc-canteenstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +16,7 @@
     <!-- navigation bar -->
     <header class="fade-up">
         <div class="logo">
-            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
+            <img src="image/team-project_image-removebg-preview.png" alt="logo">
         </div>
         <div class="search-box">
             <input type="text" placeholder="Search">
@@ -26,8 +25,9 @@
         <div class="btns">
             <div class="cart">Cart
                 <i class="fa-solid fa-cart-shopping"></i>
+                <p class="cart-value">0</p>
             </div>
-            <a href="{% url 'index' %}">
+            <a href="index.html">
                 <div class="back">Back</div>
             </a>
         </div>
@@ -39,15 +39,13 @@
             <div class="cross">
                 <i class="fa-solid fa-xmark"></i>
             </div>
-            
+
             <div class="cart-card">
-                <img src="{% static 'image/dosa.jpg' %}" class="cart-img">
-                <div class="cart-details">
+              <!--   <div class="cart-details">
                     <div class="cart-food-title">
                         Dosa
                     </div>
                     <div class="price-box">
-                        <div class="price">Rs.20</div>
                         <div class="total-price">Rs.20</div>
                     </div>
                     <input type="number" value="1" id="cart-quantity">
@@ -58,211 +56,207 @@
             </div>
 
             <div class="cart-card">
-                <img src="{% static 'image/dosa.jpg' %}" class="cart-img">
                 <div class="cart-details">
                     <div class="cart-food-title">
                         Dosa
                     </div>
                     <div class="price-box">
-                        <div class="price">Rs.20</div>
                         <div class="total-price">Rs.20</div>
                     </div>
                     <input type="number" value="1" id="cart-quantity">
                 </div>
                 <div class="item-remove">
                     <i class="fa-solid fa-trash"></i>
-                </div>
+                </div> -->
             </div>
 
-            
-            <div class="total">
-                <div class="total-title">Total</div>
-                <div class="total-price">Rs.20</div>
-            </div>
-            <button class="buy-btn">Place now</button>
+
+            <a href="checkout.html">
+                <button class="buy-btn">Place now</button>
+            </a>
         </div>
         <!-- end -->
     </header>
     <section>
         <div class="container">
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
 
-                <img src="{% static 'image/idlie.jpg' %}" alt="dosa">
+                <img src="image/idlie.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Idle</h1>
-                        <p>Rs.10 per 2 piece</p>
+                        <p>Rs.<span class="price">10</span> per 2 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
 
             </div>
             <div class="content">
-                <img src="{% static 'image/OnionUttapam.jpg' %}" alt="dosa">
+                <img src="image/OnionUttapam.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Onion Uttappam</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/pongal.jpg' %}" alt="dosa">
+                <img src="image/pongal.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Pongal</h1>
-                        <p>Rs.15 per 1 piece</p>
+                        <p>Rs.<span class="price">15</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/veg bri.jpg' %}" alt="dosa">
+                <img src="image/veg bri.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Veg Biriyani</h1>
-                        <p>Rs.50 per 1 piece</p>
+                        <p>Rs.<span class="price">50</span>per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span>per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg'%}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-image">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span>per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="{% static 'image/dosa.jpg' %}" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa">
+                <img src="image/dosa.jpg" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
-                        <p>Rs.20 per 1 piece</p>
+                        <p>Rs.<span class="price">20</span> per 1 piece</p>
                     </span>
                     <div class="btn">Add to cart</div>
                 </div>
@@ -270,7 +264,7 @@
 
         </div>
     </section>
-    <script src="{% static 'miscscript.js' %}"></script>
+    <script src="miscscript.js"></script>
 </body>
 
 </html>
