--- a/myproject/templates/checkout.html
+++ b/myproject/templates/checkout.html
@@ -86,7 +86,7 @@
                         "name": "KGH Bytes", //your business name
                         "description": "Test Transaction",
                         "image": "https://example.com/your_logo",
-                        "order_id": "order_9A33XWu170gUtm", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+                        "order_id": "order_9AlkjjnXWu170gUtm", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
                         "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
                         "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
                             "name": "Gaurav Kumar", //your customer's name
