--- a/myproject/templates/maincheckout.html
+++ b/myproject/templates/maincheckout.html
@@ -78,7 +78,7 @@
                     <i class="fa-solid fa-house"></i>
                     <input type="text" placeholder="Patient room number">
                 </div>
-                <button class="continue" id="rzp-button1">Pay with Razorpay</button>
+                <button class="continue" id="rzp-button1" onclick="make_order()">Pay with Razorpay</button>
             </form>
         </div>
     </div>
@@ -91,7 +91,7 @@
             "currency": "INR",
             "name": "KGH Bites", //your business name
             "description": "Test Transaction",
-            "image": "https://example.com/your_logo",
+            "image": "{% static 'kglogo.jpg' %}",
             "order_id": "{{ payment.id }}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
             "callback_url": "{% url 'conformation' %}",
             "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
