--- a/myproject/templates/maincheckout.html
+++ b/myproject/templates/maincheckout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{%load static%}
+{% load static%}
 
 <head>
     <meta charset="UTF-8">
@@ -27,34 +27,6 @@
 <section>
     <div class="container">
         <div class="details">
-
-            <!-- <div class="detail-value">
-                <span>
-                    <p class="serial-no">1.</p>
-                    <h1>Dosa</h1>
-                </span>
-
-                <div class="price">Rs.20</div>
-            </div> -->
-
-            <!-- <div class="detail-value">
-                <span>
-                    <p class="serial-no">2.</p>
-                    <h1>Biriyani</h1>
-                </span>
-        
-                <div class="price">Rs.50</div>
-            </div>
-
-            <div class="detail-value">
-                <span>
-                    <p class="serial-no">3.</p>
-                    <h1>Idly</h1>
-                </span>
-               
-                <div class="price">Rs.10</div>
-            </div> -->
-
             <div class="total">
                 Total
                 <div class="total-amt">Rs.80</div>
@@ -64,21 +36,21 @@
             <div class="title">
                 <h1>Details</h1>
             </div>
-            <form class="patient-details">
+            <form class="patient-details" id="payment-form">
                 {% csrf_token %}
                 <div class="input-field">
                     <i class="fa-solid fa-user"></i>
-                    <input type="text" placeholder="Username">
+                    <input type="text" name="username" placeholder="Username">
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-phone"></i>
-                    <input type="text" placeholder="Phone number">
+                    <input type="text" name="phone_number" placeholder="Phone number">
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-house"></i>
-                    <input type="text" placeholder="Patient room number">
+                    <input type="text" name="room_number" placeholder="Patient room number">
                 </div>
-                <button class="continue" id="rzp-button1" onclick="make_order()">Pay with Razorpay</button>
+                <button class="continue" id="rzp-button1">Pay with Razorpay</button>
             </form>
         </div>
     </div>
@@ -95,9 +67,9 @@
             "order_id": "{{ payment.id }}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
             "callback_url": "{% url 'conformation' %}",
             "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
-                "name": "Gaurav Kumar", //your customer's name
-                "email": "gaurav.kumar@example.com",
-                "contact": "9000090000" //Provide the customer's phone number for better conversion rates 
+                "name": "", // your customer's name
+                "email": "",
+                "contact": "" // Provide the customer's phone number for better conversion rates 
             },
             "notes": {
                 "address": "Razorpay Corporate Office"
@@ -108,8 +80,11 @@
         };
         var rzp1 = new Razorpay(options);
         document.getElementById('rzp-button1').onclick = function (e) {
-            rzp1.open();
             e.preventDefault();
+            var formData = new FormData(document.getElementById('payment-form'));
+            options.prefill.name = formData.get('username');
+            options.prefill.contact = formData.get('phone_number');
+            rzp1.open();
         }
     </script>
 </section>
