--- a/myproject/templates/maincheckout.html
+++ b/myproject/templates/maincheckout.html
@@ -8,6 +8,7 @@
     <title>Checkout | KGH-bites</title>
     <link rel="icon" href="{% static 'image/kglogo.jpg' %}">
     <link rel="stylesheet" href="{% static 'checkoutstyle.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -112,6 +113,7 @@
             e.preventDefault();
         }
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </section>
 
 <body>
